--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "next": "14.0.0",
+    "npm": "^10.2.3",
+    "nvm": "^0.0.4",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5"
