--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "next": "14.0.0",
+    "next": "^14.0.2",
     "node": "^18.17.0",
     "npm": "^10.2.3",
     "nvm": "^0.0.4",
