--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "next": "^14.0.2",
+    "next-images": "^1.8.5",
     "node": "^18.17.0",
     "npm": "^10.2.3",
     "nvm": "^0.0.4",
