--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "nvm": "^0.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5",
-    "sharp": "^0.32.6"
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/node": "^20",
